# haxchange

./: README.md  crypto-binder.cabal  haxchange.cabal  package.yaml  stack.yaml
src/: Api.hs  Haxchange.hs  Internal.hs  Main.hs  Types.hs  Utils.hs  new.hs
src/Binance/: Api.hs  Internal.hs  Types.hs
src/Bittrex/: Api.hs  Internal.hs  Types.hs
src/Haxchange/: Types.hs  Utils.hs
src/Haxchange/Binance/: Api.hs  Internal.hs  Types.hs
src/Haxchange/Bittrex/: Api.hs  Internal.hs  Types.hs
src/Haxchange/Kraken/: Api.hs  Internal.hs  Types.hs
src/Kraken/: Api.hs  Internal.hs  Types.hs
templates/: Api.hs  Internal.hs  Types.hs  make.hs  make.sh
templates/test/: ApiSpec.hs
test/Binance/: ApiSpec.hs
test/Kraken/: ApiSpec.hs
