name:                crypto-binder 
version:             0.1.0.0
homepage:            https://github.com/McGizzle/crypto-binder#readme
license:             BSD3
license-file:        LICENSE
author:              Sean McGroarty
maintainer:          mcgroas@tcd.ie
copyright:           2018 Sean McGroarty
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library 
  exposed-modules:     Bittrex.Api
  other-modules:       Bittrex.Internal, Bittrex.Types
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , wreq
                     , lens
                     , lens-aeson
                     , aeson
                     , containers
                     , text
                     , time
                     , iso8601-time
