name:                crypto-binder 
version:             0.1.0.0
homepage:            https://github.com/McGizzle/crypto-binder#readme
license:             BSD3
license-file:        LICENSE
author:              Sean McGroarty
maintainer:          mcgroas@tcd.ie
copyright:           2018 Sean McGroarty
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library 
  exposed-modules:     Types
                     , Bittrex.Api
                     , Kraken.Api
                     , Binance.Api
  other-modules:       Utils
                     , Bittrex.Internal, Bittrex.Types
                     , Kraken.Internal, Kraken.Types
                     , Binance.Internal, Binance.Types
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , wreq
                     , connection
                     , http-client-tls
                     , http-client
                     , lens
                     , lens-aeson
                     , aeson
                     , containers
                     , text
                     , time
                     , iso8601-time
                     , split
                     , bytestring
                     , base64-bytestring
                     , base16-bytestring
                     , cryptohash-sha512
                     , cryptohash-sha256
                     , hex
                     , ghc
                     , unordered-containers
                     , vector

test-suite spec
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  hs-source-dirs:      test
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , crypto-binder
                     , hspec
                     , hspec-expectations
  other-modules:       Kraken.ApiSpec
                     , Binance.ApiSpec

